# make-crypto-mobile-hackathon

./: .env.example  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  Readme.md  bot.js  bot.ts  hardhat.config.ts  package-lock.json  package.json  requirements.txt  truffle-config.js  tsconfig.json
.firebase/: hosting.YnVpbGQ.cache
21yield/: README.md
AlloyX/: Readme.md
Aster/: Readme.md
Bloinx/: LICENSE  Readme.md
Bot_Boxer/: Readme.md
Buy_Me_Some_Moola/: Readme.md
Celo_DeFi_Spend/: Readme.md
Celo_Staker/: Readme.md
Ceres/: Readme.md
Certify/: Readme.md
DAOMe/: Readme.md
DogeGame/: LICENSE  Readme.md
Dush_api/: .gitignore  Readme.md
Early_Access_Game_NFT/: LICENSE  Readme.md
EffiSend/: Readme.md
El_Dorado_Savings_Accounts/: Readme.md
Go_Africa/: Readme.md
HIPA_NFT/: LICENSE  Readme.md
Hello_Celo/: Readme.md
Infibridge/: Readme.md
Into The Verse/: Readme.md
Karma/: Readme.md
Kenulin/: Readme.md
LN-CELO Bridge/: Readme.md
Naffy/: Readme.md
Nftzi/: .env.example  AlertLoading.tsx  App.js  AppText.tsx  ConnectToValoraView.tsx  DialogDetailsView.tsx  DialogMintView.tsx  DialogWithdrawView.tsx  WithdrawChartView.tsx  app.json  check.js  constants.ts  date.utils.ts  eventEmitter.ts  global.ts  metro.config.js  package.json  theme.ts  truffle-config.js
OIDC_NFT_Login/: Readme.md
ParaDropp/: App.tsx  Readme.md  app.json  global.ts  metro.config.js  (+1 more)
Project_Kelvin/codebase/kelvin-indexer/: Cargo.toml  LICENSE  README.md
Project_Kelvin/codebase/kelvin-indexer/src/: configs.rs  main.rs
(+2791 files in other folders)
