[package]
name = "indexer-example"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[dependencies]
actix = "=0.11.0-beta.2"
clap = "3.0.0-beta.1"
openssl-probe = { version = "0.1.2" }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
near-sdk = "=3.1.0"
chrono = "0.4.19"
tokio = { version = "1.1", features = ["sync"] }
tracing = "0.1.13"
tracing-subscriber = "0.2.4"
base64 = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.55"

near-client = { git = "https://github.com/near/nearcore", rev = "4c4f18b581b7a652388c8a9c650e203726aabf7d" }
near-indexer = { git = "https://github.com/near/nearcore", rev = "4c4f18b581b7a652388c8a9c650e203726aabf7d" }
